# llama-runner

./: Cargo.toml  README.md
src/: error.rs  hf.rs  lib.rs  mcp.rs  runner.rs  sample.rs  template.rs
src/mcp/: error.rs  gemma4.rs  mod.rs  qwen3.rs
src/mcp/gemma4/: convert.rs  mod.rs  tool.rs
src/runner/: default.rs  ext.rs  gemma3.rs  gemma4.rs  mod.rs  msg.rs  req.rs  stream.rs
