[package]
name = "llama-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8.35"
hf-hub = { version = "0.5.0", features = ["tokio"] }
image = "0.25.10"
llama-cpp-2 = { version = "0.1.140", features = ["mtmd", "llguidance"] }
log = "0.4.29"
rand = "0.10.0"
serde = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.50.0"

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
rocm = ["llama-cpp-2/rocm"]
