[package]
name = "llama-runner"
version = "1.1.3"
edition = "2024"
license = "Apache-2.0"
description = "A straightforward Rust library for running llama.cpp models locally on device"
homepage = "https://github.com/zhufucdev/llama-runner"
repository = "https://github.com/zhufucdev/llama-runner"
readme = "README.md"
keywords = ["llama", "language-model", "llm", "ai"]
categories = ["text-processing", "science"]

[dependencies]
encoding_rs = "0.8"
hf-hub = { version = "0.5", features = ["tokio"] }
image = "0.25"
llama-cpp-2 = { version = "0.1.140", features = ["mtmd", "llguidance"] }
log = "0.4"
rand = "0.10"
serde = "1.0"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
tokio = "1.50"
minijinja = { version = "2.19", features = ["json"], optional = true }
minijinja-contrib = { version = "2.19", features = [
	"pycompat",
], optional = true }
rmcp = { version = "1.3", default-features = false, features = [
	"server",
], optional = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
rocm = ["llama-cpp-2/rocm"]
mcp = ["dep:minijinja", "dep:minijinja-contrib", "dep:rmcp"]
